# ParallelCourse

./: .gitignore  README.md
c01/t01/: main.cpp
c01/t02/: CMakeLists.txt  main.cpp
c01/t02/hellolib/: CMakeLists.txt  hello.cpp
